# V3D

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
src/: CMakeLists.txt
src/apps/demo/: CMakeLists.txt  main.cpp
src/modules/: CMakeLists.txt
src/modules/I3D/: CMakeLists.txt  I3D.h  I3D_camera.cpp  I3D_camera.h  I3D_driver.cpp  I3D_driver.h  I3D_dummy.cpp  I3D_dummy.h  I3D_frame.cpp  I3D_frame.h  I3D_material.cpp  I3D_material.h  I3D_mesh.cpp  I3D_sector.cpp  I3D_sector.h  I3D_texture.cpp  I3D_texture.h
src/modules/IGraph/: CMakeLists.txt  IDevice.cpp  IDevice.h  IDeviceStates.h  IGraph.cpp  IGraph.h  system.cpp
src/modules/IGraph/devices/: IDevice_D3D9.cpp  IDevice_D3D9.h  IDevice_GL.cpp  IDevice_GL.h
vendors/: CMakeLists.txt
vendors/DirectX/: CMakeLists.txt  dummy.cpp
vendors/glad/include/glad/: glad.h
vendors/glad/src/: glad.c
vendors/sokol/: CMakeLists.txt  sokol.cpp
